// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoinSelector renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CoinSelector
    coinsInfo={
      Array [
        Object {
          "code": "BNT",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "570.00000000",
          "min_confirmations": 12,
          "minimal_amount": "1.50000000",
          "name": "Bancor",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "EUR",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "800.00000000",
          "min_confirmations": null,
          "minimal_amount": "50.00000000",
          "name": "EUR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "GBP",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "700.00000000",
          "min_confirmations": null,
          "minimal_amount": "50.00000000",
          "name": "GBP",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "JPY",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "100000.00000000",
          "min_confirmations": null,
          "minimal_amount": "6000.00000000",
          "name": "JPY",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "HRK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "HRK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "CHF",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "CHF",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "PLN",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "PLN",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "RON",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "RON",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BGN",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "BGN",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "CZK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "CZK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BIX",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "2000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "5.00000000",
          "name": "Bibox Token",
          "withdrawal_fee": "3.50000000",
        },
        Object {
          "code": "COSS",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "13700.00000000",
          "min_confirmations": 12,
          "minimal_amount": "35.00000000",
          "name": "COSS",
          "withdrawal_fee": "25.00000000",
        },
        Object {
          "code": "COB",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "32500.00000000",
          "min_confirmations": 12,
          "minimal_amount": "80.00000000",
          "name": "Cobinhood",
          "withdrawal_fee": "55.00000000",
        },
        Object {
          "code": "AUD",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "AUD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "CAD",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "CAD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "NOK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "NOK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "SEK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "SEK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "DKK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "DKK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "HUF",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "HUF",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "RNS",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "10000.00000000",
          "min_confirmations": 4,
          "minimal_amount": "1.00000000",
          "name": "renos",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "XMR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15.00000000",
          "min_confirmations": 10,
          "minimal_amount": "0.10000000",
          "name": "monero",
          "withdrawal_fee": "0.01100000",
        },
        Object {
          "code": "DASH",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15.00000000",
          "min_confirmations": 2,
          "minimal_amount": "0.05000000",
          "name": "dash",
          "withdrawal_fee": "0.00050000",
        },
        Object {
          "code": "USD",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1000.00000000",
          "min_confirmations": null,
          "minimal_amount": "50.00000000",
          "name": "USD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "RUB",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "5000.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "RUB",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "TRY",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "TRY",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "GNT",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "10.00000000",
          "name": "Golem",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "EOS",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "200.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "EOS",
          "withdrawal_fee": "0.35000000",
        },
        Object {
          "code": "QTM",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "10.00000000",
          "name": "Qtum",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "HT",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "580.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "Huobi Token",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "KCS",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "650.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "KuCoin Shares",
          "withdrawal_fee": "1.20000000",
        },
        Object {
          "code": "ZAR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "ZAR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "NZD",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "NZD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BRL",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "BRL",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "IDR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "IDR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "ILS",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "ILS",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "INR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "INR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "KRW",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "KRW",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "MXN",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "MXN",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "MYR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "MYR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "PHP",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "PHP",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "THB",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "THB",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BCH",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "15.00000000",
          "min_confirmations": 6,
          "minimal_amount": "0.00500000",
          "name": "bitcoin-cash",
          "withdrawal_fee": "0.00250000",
        },
        Object {
          "code": "BNB",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "200.00000000",
          "min_confirmations": 12,
          "minimal_amount": "0.50000000",
          "name": "Binance Coin",
          "withdrawal_fee": "0.30000000",
        },
        Object {
          "code": "KNC",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "5.00000000",
          "name": "KyberNetwork",
          "withdrawal_fee": "2.70000000",
        },
        Object {
          "code": "XVG",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1200000.00000000",
          "min_confirmations": 6,
          "minimal_amount": "100.00000000",
          "name": "verge",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "NANO",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "300.00000000",
          "min_confirmations": 1,
          "minimal_amount": "0.01000000",
          "name": "nano",
          "withdrawal_fee": "0.10000000",
        },
        Object {
          "code": "LTC",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "300.00000000",
          "min_confirmations": 6,
          "minimal_amount": "0.02000000",
          "name": "litecoin",
          "withdrawal_fee": "0.01000000",
        },
        Object {
          "code": "OMG",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "200.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "OmiseGo",
          "withdrawal_fee": "0.45000000",
        },
        Object {
          "code": "BDG",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "20000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "150.00000000",
          "name": "BitDegree",
          "withdrawal_fee": "75.00000000",
        },
        Object {
          "code": "DOGE",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "5000000.00000000",
          "min_confirmations": 6,
          "minimal_amount": "100.00000000",
          "name": "doge",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "ZEC",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "20.00000000",
          "min_confirmations": 2,
          "minimal_amount": "0.01000000",
          "name": "zcash",
          "withdrawal_fee": "0.00200000",
        },
        Object {
          "code": "ETH",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "100.00000000",
          "min_confirmations": 12,
          "minimal_amount": "0.01000000",
          "name": "ethereum",
          "withdrawal_fee": "0.00500000",
        },
        Object {
          "code": "BTC",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "5.00000000",
          "min_confirmations": 2,
          "minimal_amount": "0.00100000",
          "name": "bitcoin",
          "withdrawal_fee": "0.00050000",
        },
        Object {
          "code": "USDT",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1000.00000000",
          "min_confirmations": 6,
          "minimal_amount": "10.00000000",
          "name": "tether",
          "withdrawal_fee": "3.00000000",
        },
      ]
    }
    errorAlert={[Function]}
    fetchPrice={[Function]}
    pairs={
      Object {
        "BCH": Object {
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "BTC": Object {
          "BCH": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "DOGE": Object {
          "BCH": true,
          "BTC": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "EUR": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "GBP": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "LTC": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "NANO": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "USD": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "USDT": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "XVG": true,
          "ZEC": true,
        },
        "XVG": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "ZEC": true,
        },
        "ZEC": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
        },
      }
    }
    price={
      Object {
        "deposit": 101,
        "lastEdited": "deposit",
        "pair": "ETHOMG",
        "receive": 1.76250023,
      }
    }
    selectCoin={[Function]}
    selectedCoin={
      Object {
        "deposit": "OMG",
        "lastSelected": "receive",
        "prev": Object {
          "deposit": "OMG",
          "receive": "ETH",
        },
        "receive": "ETH",
      }
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    t={[Function]}
    type="deposit"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="selectedCoin-deposit selected-coin 
            "
          data-test="selector"
          onClick={[Function]}
        >
          <i
            className="coin-icon cc OMG"
          />
          <span
            className="span"
            data-test="selected"
          >
            OMG
          </span>
          <div
            className="carret"
          />
        </div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <i
              className="coin-icon cc OMG"
            />,
            <span
              className="span"
              data-test="selected"
            >
              OMG
            </span>,
            <div
              className="carret"
            />,
          ],
          "className": "selectedCoin-deposit selected-coin 
            ",
          "data-test": "selector",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "coin-icon cc OMG",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OMG",
              "className": "span",
              "data-test": "selected",
            },
            "ref": null,
            "rendered": "OMG",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "carret",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="selectedCoin-deposit selected-coin 
            "
            data-test="selector"
            onClick={[Function]}
          >
            <i
              className="coin-icon cc OMG"
            />
            <span
              className="span"
              data-test="selected"
            >
              OMG
            </span>
            <div
              className="carret"
            />
          </div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <i
                className="coin-icon cc OMG"
              />,
              <span
                className="span"
                data-test="selected"
              >
                OMG
              </span>,
              <div
                className="carret"
              />,
            ],
            "className": "selectedCoin-deposit selected-coin 
            ",
            "data-test": "selector",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "coin-icon cc OMG",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "OMG",
                "className": "span",
                "data-test": "selected",
              },
              "ref": null,
              "rendered": "OMG",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "carret",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "storeSubscription": null,
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`CoinSelector renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CoinSelector
    coinsInfo={
      Array [
        Object {
          "code": "BNT",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "570.00000000",
          "min_confirmations": 12,
          "minimal_amount": "1.50000000",
          "name": "Bancor",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "EUR",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "800.00000000",
          "min_confirmations": null,
          "minimal_amount": "50.00000000",
          "name": "EUR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "GBP",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "700.00000000",
          "min_confirmations": null,
          "minimal_amount": "50.00000000",
          "name": "GBP",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "JPY",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "100000.00000000",
          "min_confirmations": null,
          "minimal_amount": "6000.00000000",
          "name": "JPY",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "HRK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "HRK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "CHF",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "CHF",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "PLN",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "PLN",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "RON",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "RON",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BGN",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "BGN",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "CZK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "CZK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BIX",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "2000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "5.00000000",
          "name": "Bibox Token",
          "withdrawal_fee": "3.50000000",
        },
        Object {
          "code": "COSS",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "13700.00000000",
          "min_confirmations": 12,
          "minimal_amount": "35.00000000",
          "name": "COSS",
          "withdrawal_fee": "25.00000000",
        },
        Object {
          "code": "COB",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "32500.00000000",
          "min_confirmations": 12,
          "minimal_amount": "80.00000000",
          "name": "Cobinhood",
          "withdrawal_fee": "55.00000000",
        },
        Object {
          "code": "AUD",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "AUD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "CAD",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "CAD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "NOK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "NOK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "SEK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "SEK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "DKK",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "DKK",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "HUF",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "HUF",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "RNS",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "10000.00000000",
          "min_confirmations": 4,
          "minimal_amount": "1.00000000",
          "name": "renos",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "XMR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15.00000000",
          "min_confirmations": 10,
          "minimal_amount": "0.10000000",
          "name": "monero",
          "withdrawal_fee": "0.01100000",
        },
        Object {
          "code": "DASH",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15.00000000",
          "min_confirmations": 2,
          "minimal_amount": "0.05000000",
          "name": "dash",
          "withdrawal_fee": "0.00050000",
        },
        Object {
          "code": "USD",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1000.00000000",
          "min_confirmations": null,
          "minimal_amount": "50.00000000",
          "name": "USD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "RUB",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "5000.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "RUB",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "TRY",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "TRY",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "GNT",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "10.00000000",
          "name": "Golem",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "EOS",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "200.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "EOS",
          "withdrawal_fee": "0.35000000",
        },
        Object {
          "code": "QTM",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "15000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "10.00000000",
          "name": "Qtum",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "HT",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "580.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "Huobi Token",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "KCS",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "650.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "KuCoin Shares",
          "withdrawal_fee": "1.20000000",
        },
        Object {
          "code": "ZAR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "ZAR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "NZD",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "NZD",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BRL",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "BRL",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "IDR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "IDR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "ILS",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "ILS",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "INR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "INR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "KRW",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "KRW",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "MXN",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "MXN",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "MYR",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "MYR",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "PHP",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "PHP",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "THB",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": false,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "1.00000000",
          "min_confirmations": null,
          "minimal_amount": "0.01000000",
          "name": "THB",
          "withdrawal_fee": "0.00000000",
        },
        Object {
          "code": "BCH",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "15.00000000",
          "min_confirmations": 6,
          "minimal_amount": "0.00500000",
          "name": "bitcoin-cash",
          "withdrawal_fee": "0.00250000",
        },
        Object {
          "code": "BNB",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "200.00000000",
          "min_confirmations": 12,
          "minimal_amount": "0.50000000",
          "name": "Binance Coin",
          "withdrawal_fee": "0.30000000",
        },
        Object {
          "code": "KNC",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "5.00000000",
          "name": "KyberNetwork",
          "withdrawal_fee": "2.70000000",
        },
        Object {
          "code": "XVG",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1200000.00000000",
          "min_confirmations": 6,
          "minimal_amount": "100.00000000",
          "name": "verge",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "NANO",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "300.00000000",
          "min_confirmations": 1,
          "minimal_amount": "0.01000000",
          "name": "nano",
          "withdrawal_fee": "0.10000000",
        },
        Object {
          "code": "LTC",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "300.00000000",
          "min_confirmations": 6,
          "minimal_amount": "0.02000000",
          "name": "litecoin",
          "withdrawal_fee": "0.01000000",
        },
        Object {
          "code": "OMG",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "200.00000000",
          "min_confirmations": 12,
          "minimal_amount": "2.00000000",
          "name": "OmiseGo",
          "withdrawal_fee": "0.45000000",
        },
        Object {
          "code": "BDG",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "20000.00000000",
          "min_confirmations": 12,
          "minimal_amount": "150.00000000",
          "name": "BitDegree",
          "withdrawal_fee": "75.00000000",
        },
        Object {
          "code": "DOGE",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "5000000.00000000",
          "min_confirmations": 6,
          "minimal_amount": "100.00000000",
          "name": "doge",
          "withdrawal_fee": "1.00000000",
        },
        Object {
          "code": "ZEC",
          "has_enabled_pairs": false,
          "has_enabled_pairs_for_test": false,
          "is_base_of_enabled_pair": false,
          "is_base_of_enabled_pair_for_test": false,
          "is_crypto": true,
          "is_quote_of_enabled_pair": false,
          "is_quote_of_enabled_pair_for_test": false,
          "maximal_amount": "20.00000000",
          "min_confirmations": 2,
          "minimal_amount": "0.01000000",
          "name": "zcash",
          "withdrawal_fee": "0.00200000",
        },
        Object {
          "code": "ETH",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "100.00000000",
          "min_confirmations": 12,
          "minimal_amount": "0.01000000",
          "name": "ethereum",
          "withdrawal_fee": "0.00500000",
        },
        Object {
          "code": "BTC",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "5.00000000",
          "min_confirmations": 2,
          "minimal_amount": "0.00100000",
          "name": "bitcoin",
          "withdrawal_fee": "0.00050000",
        },
        Object {
          "code": "USDT",
          "has_enabled_pairs": true,
          "has_enabled_pairs_for_test": true,
          "is_base_of_enabled_pair": true,
          "is_base_of_enabled_pair_for_test": true,
          "is_crypto": true,
          "is_quote_of_enabled_pair": true,
          "is_quote_of_enabled_pair_for_test": true,
          "maximal_amount": "1000.00000000",
          "min_confirmations": 6,
          "minimal_amount": "10.00000000",
          "name": "tether",
          "withdrawal_fee": "3.00000000",
        },
      ]
    }
    errorAlert={[Function]}
    fetchPrice={[Function]}
    pairs={
      Object {
        "BCH": Object {
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "BTC": Object {
          "BCH": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "DOGE": Object {
          "BCH": true,
          "BTC": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "EUR": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "GBP": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "LTC": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "NANO": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "USD": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
          "ZEC": true,
        },
        "USDT": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "XVG": true,
          "ZEC": true,
        },
        "XVG": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "ZEC": true,
        },
        "ZEC": Object {
          "BCH": true,
          "BTC": true,
          "DOGE": true,
          "LTC": true,
          "NANO": true,
          "USDT": true,
          "XVG": true,
        },
      }
    }
    price={
      Object {
        "deposit": 101,
        "lastEdited": "deposit",
        "pair": "ETHOMG",
        "receive": 1.76250023,
      }
    }
    selectCoin={[Function]}
    selectedCoin={
      Object {
        "deposit": "OMG",
        "lastSelected": "receive",
        "prev": Object {
          "deposit": "OMG",
          "receive": "ETH",
        },
        "receive": "ETH",
      }
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
    t={[Function]}
    type="receive"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="selectedCoin-receive selected-coin 
            "
          data-test="selector"
          onClick={[Function]}
        >
          <i
            className="coin-icon cc ETH"
          />
          <span
            className="span"
            data-test="selected"
          >
            ETH
          </span>
          <div
            className="carret"
          />
        </div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <i
              className="coin-icon cc ETH"
            />,
            <span
              className="span"
              data-test="selected"
            >
              ETH
            </span>,
            <div
              className="carret"
            />,
          ],
          "className": "selectedCoin-receive selected-coin 
            ",
          "data-test": "selector",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "coin-icon cc ETH",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "ETH",
              "className": "span",
              "data-test": "selected",
            },
            "ref": null,
            "rendered": "ETH",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "carret",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="selectedCoin-receive selected-coin 
            "
            data-test="selector"
            onClick={[Function]}
          >
            <i
              className="coin-icon cc ETH"
            />
            <span
              className="span"
              data-test="selected"
            >
              ETH
            </span>
            <div
              className="carret"
            />
          </div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <i
                className="coin-icon cc ETH"
              />,
              <span
                className="span"
                data-test="selected"
              >
                ETH
              </span>,
              <div
                className="carret"
              />,
            ],
            "className": "selectedCoin-receive selected-coin 
            ",
            "data-test": "selector",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "coin-icon cc ETH",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ETH",
                "className": "span",
                "data-test": "selected",
              },
              "ref": null,
              "rendered": "ETH",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "carret",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "storeSubscription": null,
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
